--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "install": "^0.1.8",
     "npm": "^3.3.3",
     "react": "^0.13.3",
+    "react-geosuggest": "^1.9.0",
     "react-router": "^1.0.0-rc1"
   },
   "devDependencies": {
