--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
-    "webpack": "^1.12.2"
+    "webpack": "^1.12.2",
+    "css-loader": "^0.18.0",
+    "file-loader": "^0.8.4",
+    "react-paginate": "^0.2.0",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6"
   }
 }
