--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "npm": "^3.3.3",
     "react": "^0.13.3",
     "react-router": "^1.0.0-rc1",
-    "react-tap-event-plugin": "^0.1.7",
-    "reqwest": "^2.0.1"
+    "react-tap-event-plugin": "^0.1.7"
   },
   "devDependencies": {
     "babel-core": "^5.8.25",
