--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
-    "webpack": "^1.12.2",
     "css-loader": "^0.18.0",
     "file-loader": "^0.8.4",
     "react-paginate": "^0.2.0",
     "style-loader": "^0.12.4",
-    "url-loader": "^0.5.6"
+    "underscore": "^1.8.3",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2"
   }
 }
