--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "node devServer.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,13 @@
     "style-loader": "^0.12.4",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.2"
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.2.0",
+    "express": "^4.13.3",
+    "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.0",
+    "redbox-react": "^1.0.1",
+    "webpack-hot-middleware": "^2.0.0",
+    "babel-plugin-react-transform": "^1.0.1"
   }
 }
