--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "node devServer.js"
+    "start": "node devServer.js",
+    "upload": "node publish.js"
   },
   "repository": {
     "type": "git",
@@ -28,21 +29,22 @@
     "react-tap-event-plugin": "^0.1.7"
   },
   "devDependencies": {
+    "aws-sdk": "^2.2.4",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "babel-plugin-react-transform": "^1.0.1",
     "css-loader": "^0.18.0",
+    "express": "^4.13.3",
     "file-loader": "^0.8.4",
     "react-paginate": "^0.2.0",
+    "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.0",
+    "redbox-react": "^1.0.1",
     "style-loader": "^0.12.4",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
-    "express": "^4.13.3",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.0",
-    "redbox-react": "^1.0.1",
-    "webpack-hot-middleware": "^2.0.0",
-    "babel-plugin-react-transform": "^1.0.1"
+    "webpack-hot-middleware": "^2.0.0"
   }
 }
