--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "install": "^0.1.8",
     "material-ui": "^0.11.1",
     "npm": "^3.3.3",
+    "qwery": "^4.0.0",
     "react": "^0.13.3",
     "react-router": "^1.0.0-rc1",
-    "react-tap-event-plugin": "^0.1.7"
+    "react-tap-event-plugin": "^0.1.7",
+    "reqwest": "^2.0.1"
   },
   "devDependencies": {
     "aws-sdk": "^2.2.4",
