--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "css-loader": "^0.18.0",
     "express": "^4.13.3",
     "file-loader": "^0.8.4",
+    "react-modal": "^0.5.0",
     "react-paginate": "^0.2.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
