--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "start": "node devServer.js",
-    "upload": "node publish.js"
+    "upload": "node publish.js",
+    "getCities": "node ./utils/getCityList.js > ./app/utils/cityList.json"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/vokou/vokou-web",
   "dependencies": {
     "axios": "^0.5.4",
+    "cheerio": "^0.19.0",
     "install": "^0.1.8",
     "material-ui": "^0.11.1",
     "npm": "^3.3.3",
@@ -28,20 +30,26 @@
     "react": "^0.13.3",
     "react-router": "^1.0.0-rc1",
     "react-tap-event-plugin": "^0.1.7",
-    "reqwest": "^2.0.1"
+    "reqwest": "^2.0.1",
+    "xhr2": "^0.1.3"
   },
   "devDependencies": {
     "aws-sdk": "^2.2.4",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.0.1",
+    "cheerio": "^0.19.0",
     "css-loader": "^0.18.0",
+    "domelementtype": "^1.3.0",
     "express": "^4.13.3",
     "file-loader": "^0.8.4",
+    "htmlparser2": "^3.8.3",
+    "lodash": "^3.10.1",
     "react-paginate": "^0.2.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1",
+    "request": "^2.64.0",
     "style-loader": "^0.12.4",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.6",
