--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.13.3",
     "file-loader": "^0.8.4",
     "htmlparser2": "^3.8.3",
+    "json-loader": "^0.5.3",
     "lodash": "^3.10.1",
     "react-paginate": "^0.2.0",
     "react-transform-catch-errors": "^1.0.0",
