--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
   "homepage": "https://github.com/vokou/vokou-web",
   "dependencies": {
     "axios": "^0.5.4",
-    "cheerio": "^0.19.0",
     "install": "^0.1.8",
-    "material-ui": "^0.11.1",
+    "material-ui": "^0.12.4",
     "npm": "^3.3.3",
     "qwery": "^4.0.0",
-    "react": "^0.13.3",
-    "react-router": "^1.0.0-rc1",
-    "react-tap-event-plugin": "^0.1.7",
+    "react": "^0.14.0",
+    "react-router": "^1.0.0-rc3",
+    "react-tap-event-plugin": "^0.2.1",
     "reqwest": "^2.0.1",
-    "xhr2": "^0.1.3"
+    "xhr2": "^0.1.3",
+    "parse": "^1.6.5"
   },
   "devDependencies": {
     "aws-sdk": "^2.2.4",
@@ -48,8 +48,6 @@
     "imagemin": "^3.2.0",
     "json-loader": "^0.5.3",
     "lodash": "^3.10.1",
-    "parse": "^1.6.5",
-    "react-bootstrap": "^0.26.1",
     "react-onclickoutside": "^0.3.3",
     "react-paginate": "^0.2.0",
     "react-transform-catch-errors": "^1.0.0",
