--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "install": "^0.1.8",
     "material-ui": "^0.12.4",
     "npm": "^3.3.3",
+    "parse": "^1.6.5",
     "qwery": "^4.0.0",
     "react": "^0.14.0",
     "react-router": "^1.0.0-rc3",
     "react-tap-event-plugin": "^0.2.1",
     "reqwest": "^2.0.1",
-    "xhr2": "^0.1.3",
-    "parse": "^1.6.5"
+    "sha1": "^1.1.1",
+    "xhr2": "^0.1.3"
   },
   "devDependencies": {
     "aws-sdk": "^2.2.4",
