--- a/package.json
+++ b/package.json
@@ -22,17 +22,21 @@
   "homepage": "https://github.com/vokou/vokou-web",
   "dependencies": {
     "axios": "^0.5.4",
+    "blacklist": "^1.1.2",
     "install": "^0.1.8",
     "material-ui": "^0.12.4",
     "npm": "^3.3.3",
     "parse": "^1.6.5",
     "qwery": "^4.0.0",
     "react": "^0.14.0",
+    "react-addons-transition-group": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-router": "^1.0.0-rc3",
     "react-tap-event-plugin": "^0.2.1",
     "reqwest": "^2.0.1",
     "sha1": "^1.1.1",
-    "xhr2": "^0.1.3"
+    "xhr2": "^0.1.3",
+    "lodash": "^3.10.1"
   },
   "devDependencies": {
     "aws-sdk": "^2.2.4",
@@ -48,7 +52,6 @@
     "image-webpack-loader": "^1.6.1",
     "imagemin": "^3.2.0",
     "json-loader": "^0.5.3",
-    "lodash": "^3.10.1",
     "react-onclickoutside": "^0.3.3",
     "react-paginate": "^0.2.0",
     "react-transform-catch-errors": "^1.0.0",
@@ -56,7 +59,6 @@
     "redbox-react": "^1.0.1",
     "request": "^2.64.0",
     "style-loader": "^0.12.4",
-    "underscore": "^1.8.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
