--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1",
     "request": "^2.64.0",
+    "strip-loader": "^0.1.0",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
