--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "blacklist": "^1.1.2",
     "install": "^0.1.8",
+    "lodash": "^3.10.1",
     "material-ui": "^0.12.4",
+    "mobile-detect": "^1.3.0",
     "npm": "^3.3.3",
     "parse": "^1.6.5",
     "qwery": "^4.0.0",
@@ -35,8 +37,7 @@
     "react-tap-event-plugin": "^0.2.1",
     "reqwest": "^2.0.1",
     "sha1": "^1.1.1",
-    "xhr2": "^0.1.3",
-    "lodash": "^3.10.1"
+    "xhr2": "^0.1.3"
   },
   "devDependencies": {
     "aws-sdk": "^2.2.4",
